# Undecidedtitle

./: .gitignore  LICENSE  README.ko.md  README.md
.github/scripts/: sync-notion.js
.github/workflows/: notion-wbs.yml
ai-service/: .env.example  .gitignore  README.md  pyproject.toml
ai-service/app/: config.py  main.py
ai-service/app/api/: anomaly.py  search.py
ai-service/app/core/: embeddings.py  llm.py  prompt_loader.py  vectorstore.py
ai-service/app/core/prompts/: action_guide.txt  anomaly_analysis.txt
ai-service/app/pipelines/: anomaly.py  chunking.py  embedding.py  rag.py
ai-service/app/schemas/: search.py  sensor_log.py
ai-service/data/: anomaly_rules.json  error_codes.json  error_codes.schema.json
ai-service/data/manuals/: README.md  _page_index.json
ai-service/migrations/: 001_init_vectorstore.sql
ai-service/scripts/: build_cached_responses.py  build_error_codes.py  build_eval_set.py  generate_manuals.py  ingest_manuals.py  init_db.py  pull_models.sh
ai-service/tests/eval/: README.md  run_eval.py  run_latency.py  test_set.json
ai-service/tests/unit/: test_anomaly_rules.py  test_chunking.py  test_embedding.py  test_llm_factory.py  test_prompt_loader.py  test_rag_fallback.py  test_rag_parsing.py  test_vectorstore.py
docs/02-design/: ai-api-spec.yaml
docs/04-testing/: latency_report.md  rag_accuracy_report.md  tuning_log.md
